coq_translation/default/examples/error_handling/boxing_errors.err
thread 'rustc' panicked at 'type Dynamic(
    [
        Binder(
            Trait(
                std::error::Error,
            ),
            [],
        ),
    ],
    ReErased,
    Dyn,
) not yet handled', lib/src/thir_ty.rs:59:14
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
